FIx resolve overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,9 @@
 
 body {
   overflow-x: hidden;
-  position: fixed;
   width: 100%;
   height: 100%;
-  overscroll-behavior: none;
+  overscroll-behavior-x: none;
   -webkit-overflow-scrolling: touch;
 }
 
